[metadata]
name = pyknow_rt
author = David Francos

[entry_points]
console_scripts =
   pyknow_rt=pyknow_rt:main

[tool:pytest]
flake8-ignore =
    doc/conf.py ALL

addopts=--flake8 -m "not wip" -vv --cov-report html:.cov_html --cov-report term --cov pyknow_rt

[pbr]
autodoc_tree_index_modules=True

[build_sphinx]
builder=html
source-dir=docs/source

[alias]
test=pytest behave

[extras]
doc =
    sphinx
    sphinxcontrib-napoleon
    sphinxcontrib-httpdomain

